--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ h1{
 h2{
   margin: 0;
   padding: 0;
-  border: dashed black 1px;
   font-size: 5vh;
 }
 
@@ -73,6 +72,10 @@ h4{
   margin: 0;
   padding: 0;
   font-size: 2vh;
+}
+
+form{
+  float: left;
 }
 
 #logomale{
@@ -105,6 +108,7 @@ h4{
     position: sticky;
     flex-wrap: nowrap;
     height: 66vh;
+    align-items: baseline;
   }
 
   footer{
