--- a/style.css
+++ b/style.css
@@ -95,6 +95,30 @@ form{
   border: groove rgba(166, 45, 236, 0.678) 1vh;
 }
 
+#animacja{
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%; /* Szerokość paska */
+  background-color: #fff; /* Kolor tła */
+  border: 1px solid #ccc; /* Ramka paska */
+  color: black;
+}
+
+#animacja-content {
+  display: inline-block;
+  padding-left: 100%; /* Dodatkowa przestrzeń przed tekstem */
+  animation: pasek 10s linear infinite; /* Animacja przesuwania */
+}
+
+@keyframes pasek {
+  from {
+      transform: translateX(0);
+  }
+  to {
+      transform: translateX(-100%); /* Przesuwanie do lewej */
+  }
+}
+
 @media screen and (min-width: 500px) {
   nav{
     background-color: rgba(166, 45, 236, 0.13);
