--- a/style.css
+++ b/style.css
@@ -1,159 +1,99 @@
-body{
-  overflow: hidden;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-#allshi{
-  display: flex;
-  flex-direction: column;
-  font-family: Arial;
-  height: 100vh;
-  width: 100vw;
+body {
+  font-family: Arial, sans-serif;
 }
 
-header{
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
+header {
   background-color: rgba(166, 45, 236, 0.678);
-  border: solid red 1px;
-  height: 30vh;
-  width: 100vw;
-  position: sticky;
-}
-
-nav{
-  border: solid blue 1px;
-  height: 57vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  overflow-x: scroll;
-  position: sticky;
-}
-
-#animacja{
-  background-color: black;
   color: white;
-}
-
-footer{
-  overflow: hidden;
-  display: flex;
-  background-color: rgba(166, 45, 236, 0.678);
-  border: solid green 1px;
-  height: 7vh;
-  width: 100vw;
-  position: sticky;
   text-align: center;
-  align-items: center;
-  justify-content: center;
+  padding: 0;
 }
 
-h1{
-  margin: 0;
-  padding: 0;
-  font-size: 10vh;
-  position: sticky;
-  margin: auto;
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  background-color: #333;
 }
 
-h2{
+nav ul li {
   margin: 0;
-  padding: 0;
-  font-size: 5vh;
 }
 
-h3{
-  margin: 0;
-  padding: 0;
-  font-size: 5vh;
+nav ul li a {
+  color: white;
+  padding: 14px 20px;
+  text-decoration: none;
+  display: block;
 }
 
-h4{
-  margin: 0;
-  padding: 0;
+nav ul li a:hover {
+  background-color: rgba(166, 45, 236, 0.678);
+}
+
+main {
+  padding: 20px;
+}
+
+footer {
+  background-color: rgba(166, 45, 236, 0.904);
+  color: white;
+  text-align: center;
+  padding: 1em 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  height: 7vh;
   font-size: 2vh;
 }
 
-form{
-  float: left;
-}
-
-#logomale{
-  width: 16%;
+#logomale {
+  width: 10vw;
   border-radius: 10%;
   border: groove #a62decad 1vh;
 }
 
-#logoduze{
-  width: 18%;
-  border-radius: 10%;
-  border: groove rgba(166, 45, 236, 0.678) 1vh;
-}
-
-#animacja{
-  overflow: hidden;
+#animacja {
+  background-color: black;
+  color: white;
   white-space: nowrap;
-  width: 100%; /* Szerokość paska */
-  background-color: #fff; /* Kolor tła */
-  border: 1px solid #ccc; /* Ramka paska */
-  color: black;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  position: fixed;
+  bottom: 7vh;
+  width: 100%;
+  height: 3vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2vh;
 }
 
 #animacja-content {
   display: inline-block;
-  padding-left: 100%; /* Dodatkowa przestrzeń przed tekstem */
-  animation: pasek 10s linear infinite; /* Animacja przesuwania */
+  white-space: nowrap;
 }
 
-@keyframes pasek {
-  from {
-      transform: translateX(0);
-  }
-  to {
-      transform: translateX(-100%); /* Przesuwanie do lewej */
-  }
-}
-
-@media screen and (min-width: 500px) {
-  nav{
-    background-color: rgba(166, 45, 236, 0.13);
+@media (max-width: 600px) {
+  nav ul {
     flex-direction: column;
-    overflow-x: auto;
+    text-align: center;
+  }
+}
+
+@media (min-width: 601px) {
+  footer {
+    position: fixed;
+    width: 100%;
   }
 
-  header{
-    justify-content: space-between;
-    align-content: space-between;
-    flex-wrap: wrap;
-    height: 18vh;
-  }
-
-  nav{
-    position: sticky;
-    flex-wrap: nowrap;
-    height: 66vh;
-    align-items: baseline;
-  }
-
-  footer{
-    position: sticky;
-    height: 10vh;
-  }
-
-  #logomale{
-    float: left;
-  }
-
-  #logoduze{
-    width: 18%;
-  }
-
-  h4{
-    font-size: 3vh;
+  nav {
+    top: 0;
   }
 }
